# vm-container-utils

./: .travis.yml  ChangeLog  Makefile.am  NEWS  README  configure.ac
src/conf/etc/: Makefile.am
src/conf/etc/lqvm/: Makefile.am
src/conf/etc/lxcu/: Makefile.am  debian-releases.conf.in  lxcu.conf.in
src/conf/etc/lxcu/debian/apt/: Makefile.am  sources.list.in
src/conf/etc/lxcu/debian/apt/sources.list.d/: Makefile.am  bintray.list.in  hermes.list.in
src/conf/etc/lxcu/debian/apt/trusted.gpg.d/: Makefile.am  bintray-keyring.gpg.in  hermes-keyring.gpg.in  obs-debian-keyring.gpg.in
src/conf/etc/lxcu/debian/basic/: Makefile.am
src/conf/etc/lxcu/debian/bookworm/apt/: Makefile.am
src/conf/etc/lxcu/debian/bookworm/basic/: Makefile.am
src/conf/etc/lxcu/debian/bookworm/dev/: Makefile.am  cache.list.in
src/conf/etc/lxcu/debian/bookworm/dosab/: Makefile.am  sources.list.available.in  sources.list.unavailable.in
src/conf/etc/lxcu/debian/bullseye/apt/: Makefile.am  sources.list.in
src/conf/etc/lxcu/debian/bullseye/basic/: Makefile.am
src/conf/etc/lxcu/debian/bullseye/dev/: Makefile.am  cache.list.in  install.list.in
src/conf/etc/lxcu/debian/bullseye/dosab/: Makefile.am  hermes.list.in  sources.list.available.in  sources.list.unavailable.in
src/conf/etc/lxcu/debian/buster/apt/: Makefile.am
src/conf/etc/lxcu/debian/buster/basic/: Makefile.am  install.list.in
src/conf/etc/lxcu/debian/buster/dev/: Makefile.am  cache.list.in  install.list.in
src/conf/etc/lxcu/debian/buster/dosab/: Makefile.am  server.list.in  sources.list.unavailable.in
src/conf/etc/lxcu/debian/dev/: Makefile.am  cache.list.in  install.list.in
src/conf/etc/lxcu/debian/dosab/: Makefile.am  bintray.list.unavailable.in  hermes.available.in
src/conf/etc/lxcu/debian/stretch/apt/: Makefile.am
src/conf/etc/lxcu/debian/stretch/basic/: Makefile.am
src/conf/etc/lxcu/debian/stretch/dev/: Makefile.am  cache.list.in  install.list.in
src/conf/etc/lxcu/debian/stretch/dosab/: Makefile.am  obs.list.available.in
src/conf/etc/lxcu/debian/testing/apt/: Makefile.am  sources.list.in
src/conf/etc/lxcu/debian/testing/basic/: Makefile.am
src/conf/etc/lxcu/debian/testing/dev/: Makefile.am  cache.list.in  install.list.in
src/conf/etc/lxcu/debian/testing/dosab/: Makefile.am
src/conf/etc/lxcu/fedora/33/basic/: Makefile.am  install.list.in
src/conf/etc/lxcu/fedora/33/dev/: Makefile.am
src/conf/etc/lxcu/fedora/33/dosab/: Makefile.am
src/conf/etc/lxcu/fedora/34/basic/: Makefile.am
src/conf/etc/lxcu/fedora/34/dev/: Makefile.am
src/conf/etc/lxcu/fedora/34/dosab/: Makefile.am  hermes-stable.repo.in  hermes.mgent.home.unavailable.in
src/conf/etc/lxcu/fedora/35/basic/: Makefile.am
src/conf/etc/lxcu/fedora/35/dev/: Makefile.am  cache.list.in  install.list.in
src/conf/etc/lxcu/fedora/35/dosab/: Makefile.am  hermes.mgent.home.available.in
src/conf/etc/lxcu/fedora/36/basic/: Makefile.am
src/conf/etc/lxcu/fedora/36/dev/: Makefile.am  cache.list.in  install.list.in
src/conf/etc/lxcu/fedora/36/dosab/: Makefile.am  hermes-beta.repo.in
src/conf/etc/lxcu/fedora/37/basic/: Makefile.am
src/conf/etc/lxcu/fedora/37/dev/: Makefile.am  cache.list.in  install.list.in
src/conf/etc/lxcu/fedora/37/dosab/: Makefile.am
src/conf/etc/lxcu/fedora/38/basic/: Makefile.am
src/conf/etc/lxcu/fedora/38/dev/: Makefile.am
src/conf/etc/lxcu/fedora/38/dosab/: Makefile.am  server.list.in
src/conf/etc/lxcu/opensuse/15.2/basic/: Makefile.am
src/conf/etc/lxcu/opensuse/15.2/dev/: Makefile.am  cache.list.in  install.list.in
src/conf/etc/lxcu/opensuse/15.2/dosab/: Makefile.am  hermes.unavailable.in
src/conf/etc/lxcu/ubuntu/apt/: Makefile.am  sources.list.in
src/conf/etc/lxcu/ubuntu/basic/: Makefile.am  install.list.in
src/conf/etc/lxcu/ubuntu/dev/: Makefile.am  cache.list.in
src/conf/etc/lxcu/ubuntu/dosab/: Makefile.am  hermes.list.in  hermes.mgent.home.available.in  launchpad.list.unavailable.in  sources.list.unavailable.in
src/lqvm/man/1/: Makefile.am  lqvm-shutdown.1.man.in  lqvm-shutdown.sh.1.man.in  lqvm-snap.1.man.in  lqvm-start.1.man.in  lqvms-backups.1.man.in  lqvms-backups.sh.1.man.in  lqvms-sequential-start.1.man.in  lqvms-snap.1.man.in  lqvms-snap.sh.1.man.in
src/lqvm/man/5/: Makefile.am  lqvm.conf.5.man.in
src/lqvm/prg/bash/: Makefile.am  lqvm-shutdown.sh.in  lqvm-snap.sh.in  lqvm-start.sh.in  lqvms-backups.sh.in  lqvms-sequential-start.sh.in  lqvms-snap.sh.in
src/lqvm/prg/bash/archive/: README
src/lqvm/prg/bash/archive/vbox/: vm-snapshot-cre.sh  vm-snapshots-del.sh  vm-start-headless.sh  vms-backup.sh  vms-snapshots-del-all.sh
src/lxcu/man/1/: Makefile.am  lxcu-attach.1.man.in  lxcu-copy.1.man.in  lxcu-copy.sh.1.man.in  lxcu-create.1.man.in  lxcu-create.sh.1.man.in  lxcu-project-tmp.1.man.in  lxcu-project-tmp.sh.1.man.in  lxcu-start.1.man.in  lxcu-upgrade.1.man.in  lxcu-upgrade.sh.1.man.in
src/lxcu/prg/bash/: Makefile.am  lxcu-attach.sh.in  lxcu-copy.sh.in  lxcu-create.sh.in  lxcu-project-tmp.sh.in  lxcu-start.sh.in  lxcu-upgrade.sh.in
src/man/1/lqvm/: Makefile.am  lqvm-shutdown.sh.1.man.in  lqvm-snap.sh.1.man.in  lqvm-start.sh.1.man.in  lqvms-sequential-start.sh.1.man.in  lqvms-snap.sh.1.man.in
src/man/1/lxcu/: Makefile.am  lxcu-attach.sh.1.man.in  lxcu-copy.sh.1.man.in  lxcu-create.sh.1.man.in  lxcu-project-tmp.sh.1.man.in  lxcu-start.sh.1.man.in  lxcu-upgrade.sh.1.man.in
src/man/5/lqvm/: Makefile.am  lqvm.conf.5.man.in
src/man/5/lxcu/: Makefile.am  lxcu.conf.5.man.in
src/prg/bash/lqvm/: Makefile.am  lqvm-ext-snapshot-del-live.sh  lqvm-shutdown.sh.in  lqvm-snap.sh.in  lqvm-start.sh.in  lqvms-backups.sh.in  lqvms-sequential-start.sh.in  lqvms-snap.sh.in
src/prg/bash/lxcu/: Makefile.am  lxc-create-dev.sh  lxc-network.sh  lxc-provide-scratch.sh  lxc-update-dev-all.sh  lxcu-attach.sh.in  lxcu-copy.sh.in  lxcu-create.sh.in  lxcu-project-tmp.sh.in  lxcu-start.sh.in  lxcu-upgrade.sh.in
src/prg/bash/lxcu/deb/: cre-basic.sh  cre-dev.sh  upd-dev.sh
src/prg/bash/lxcu/deb/builds/: build-alarmclock-java.sh  build-libmgesysutils.sh  build-swoc.sh  build-txt2manwrap.sh
(+201 files in other folders)
